refactor(solution): seal cross-domain reads behind consumer-owned ports
Hide UserMapper, EdgeOperationMapper, ProblemTagRelationMapper,
ProblemTagMapper, UserAchievementMapper and AchievementMapper behind
three new consumer-owned read ports defined in solution/port/ and
implemented in their respective provider modules:

- SolutionVoteReadPort  → vote/port/adapter/SolutionVoteReadAdapter
- ProblemTagReadPort    → problem/port/adapter/ProblemTagReadAdapter
- AchievementBadgeReadPort → achievement/port/adapter/AchievementBadgeReadAdapter

UserReadProjection (already a deep module) replaces UserMapper.
The per-row userMapper.selectById loop on findByProblemId is replaced
with one batched userReadProjection.findAllById call, killing the N+1.

DefaultSolutionProjection now imports no cross-module mapper. The test
file (9 tests, all green) mocks only the ports — the regression
guarantee: re-introducing a direct mapper import forces this test to
grow new mocks.